--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                                             <li class="role">- PingSweep</li>
                                             <ul class="text"><li>Bash</li></ul>
                                             <br><br>
-                                            <li class="role"><a href="https://ishaniya.github.io/portfolioResume/">- Personal Portfolio</a></li>
+                                            <li class="role"><a href="https://parthchauhan0011.github.io/portfolio/">- Personal Portfolio</a></li>
                                             <ul class="text"><li>HTML | CSS | JavaScript</li></ul>
                                             <br><br>
                                             <li class="role">- Weather Details</a></li>
@@ -308,7 +308,7 @@
                                             </div>
                                             <p class="role-down"><i class="fa-solid fa-message"></i> Feel free to drop a message.</p>
               <div id="footer" class="role-down">
-                  <p><a href="./assets/Saniya's Resume.pdf"><i class="fa-solid fa-file-pdf"></i>&nbsp;Resume PDF</a></p>
+                  <p><a href="./assets/resume.pdf"><i class="fa-solid fa-file-pdf"></i>&nbsp;Resume PDF</a></p>
                 <p class="li-mid"><a href="https://www.linkedin.com/in/parthchauhan0011/"><i class="fa-brands fa-linkedin-in">&nbsp;</i>LinkedIn&nbsp;&nbsp;&nbsp;</a><a href="https://twitter.com/pchauhan0011"><i class="fa-brands fa-twitter">&nbsp;</i>Twitter&nbsp;&nbsp;&nbsp;</a><a href="https://github.com/parthchauhan0011"><i class="fa-brands fa-github">&nbsp;</i>Github</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="tel:+91-8447054300"><i class="fa-solid fa-phone"></i>+91-8447054300</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-envelope"></i>&nbsp;<a href="mailto:parth.chauhan0011@gmail.com">Mail: parth.chauhan0011@gmail.com</a>&nbsp;&nbsp;&nbsp;</p>
                 </div>
                                         </div>
