--- a/index.html
+++ b/index.html
@@ -241,9 +241,34 @@
                                         <div class="pro-details">
                                             <div class="name"><i class="fa-solid fa-building"></i> My Experience</div>
                                             <ul class="li-mid">
+                                                <li class="role">- Whatfix</li>
+                                                <ul style="list-style-type:circle" class="text"><li>Solutions Engineer</li>
+                                                    <li >01/2022-Current</li>
+                                                    <li >SPOT Award Winner</li>
+                                                    <li>Answered incoming support inquiries via chat and email using Zendesk and acted as L1 Support to Product related issues and queries</li>
+                                                    <li>Achieved Highest CSAT's (115) ever in any quarter (Customer Appreciation)
+                                                    </li>
+                                                    <li>Collaborated with supervisors to escalate and address customer inquiries or technical issues.</li>
+                                                    </ul>
+                                                    <br><br>
+                                                <li class="role">- Whatfix</li>
+                                                <ul class="text" style="list-style-type:circle"><li>Solutions Engineer - Intern</li>
+                                                <li>04/2021-12/2021</li>
+                                                <li>Resolved diverse range of technical issues across multiple systems and applications<br> for customers and end-users across various time zones.</li>
+                                                <li>Collaborated with supervisors to escalate and address customer inquiries or technical issues.</li>
+                                                <li>Managed over 3-4 customer calls per day to debug issues</li>
+                                                <li>Used ticketing systems to manage and process support actions and requests.</li></ul>
+                                                <br><br>
+                                                <li class="role">- Anti Cyber Crime Society</li>
+                                                <ul class="text" style="list-style-type:circle"><li>Cyber Security Intern</li>
+                                                    <li >01/2021-04/2021</li>
+                                                    <li >Hunting Phishing Websites
+                                                    </li>
+                                                    </ul>
+                                                    <br><br>
                                                 <li class="role"><a href="https://www.credly.com/badges/59700d21-4202-48b8-a0f1-576c3d7e7fee?source=linked_in_profile">- Virtually Testing Foundation</a></li>
-                                                <ul class="text"><li>Intern</li>
-                                                <li>10/2020-03/2021</li>
+                                                <ul class="text" style="list-style-type:circle"><li>Intern</li>
+                                                <li>10/2020-04/2021</li>
                                                 <li>Virtualization</li>
                                                 <li>Kubernetes</li>
                                                 <li>Hands-on Network & Security Concepts</li>
