--- a/index.html
+++ b/index.html
@@ -241,9 +241,19 @@
                                         <div class="pro-details">
                                             <div class="name"><i class="fa-solid fa-building"></i> My Experience</div>
                                             <ul class="li-mid">
-                                                <li class="role">- Whatfix</li>
+                                                <li class="role">- Criteo</li>
+                                                <ul style="list-style-type:circle" class="text"><li>Tehcnical Solutions Engineer</li>
+                                                    <li >07/2023-Current</li>
+                                                    <li>Helped clients with integration and deployment of their Ads</li>
+                                                    <li>Provided technical support in root cause failure analysis for significant production issues and investigations.</li>
+                                                    <li>Worked on multiple projects at once, prioritize and execute a large number of tasks, and resolve issues quickly</li>
+                                                    <li>Worked with diverse technologies such as different MMPs and ECPs</li>
+                                                    <li>Worked with APls & GTM </li>
+                                                    <li>Offered technical assistance to clients to facilitate seamless installations and updates.</li>
+                                                    </ul>
+                                                    <br><br>
                                                 <ul style="list-style-type:circle" class="text"><li>Solutions Engineer</li>
-                                                    <li >01/2022-Current</li>
+                                                    <li >01/2022-07/2023</li>
                                                     <li >SPOT Award Winner</li>
                                                     <li>Answered incoming support inquiries via chat and email using Zendesk and acted as L1 Support to Product related issues and queries</li>
                                                     <li>Achieved Highest CSAT's (115) ever in any quarter (Customer Appreciation)
@@ -333,7 +343,7 @@
                                             </div>
                                             <p class="role-down"><i class="fa-solid fa-message"></i> Feel free to drop a message.</p>
               <div id="footer" class="role-down">
-                  <p><a href="./assets/resume.pdf"><i class="fa-solid fa-file-pdf"></i>&nbsp;Resume PDF</a></p>
+                  <p><a href="./assets/Parth_resume.pdf"><i class="fa-solid fa-file-pdf"></i>&nbsp;Resume PDF</a></p>
                 <p class="li-mid"><a href="https://www.linkedin.com/in/parthchauhan0011/"><i class="fa-brands fa-linkedin-in">&nbsp;</i>LinkedIn&nbsp;&nbsp;&nbsp;</a><a href="https://twitter.com/pchauhan0011"><i class="fa-brands fa-twitter">&nbsp;</i>Twitter&nbsp;&nbsp;&nbsp;</a><a href="https://github.com/parthchauhan0011"><i class="fa-brands fa-github">&nbsp;</i>Github</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="tel:+91-8447054300"><i class="fa-solid fa-phone"></i>+91-8447054300</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-solid fa-envelope"></i>&nbsp;<a href="mailto:parth.chauhan0011@gmail.com">Mail: parth.chauhan0011@gmail.com</a>&nbsp;&nbsp;&nbsp;</p>
                 </div>
                                         </div>
